/**
 * @file: msg.proto
 * @brief: Protobuf for a Message
 * @author: qing
 * @date: 2018-10-17
 */
syntax = "proto2";
package proto;

enum MsgType {
  REQ_GET_INFO =  11;
  REP_GET_INFO =  12;
  REQ_PUSH_DATA = 21;
  REQ_PUSH_LOG =  22;
  REP_PUSH =      29;
}

message BufView {
  required int32 itemsize = 1;
  required string format = 2;
  repeated int32 shape = 3;
  repeated int32 stride = 4;
}

message ReqGetInfo {
}

message RepGetInfo {
  required uint32 slot_index = 21;
  required uint32 entry_size = 22;
  repeated BufView view = 31; // r,p,v,q,*
}

message ReqPushData {
  required uint32 start_step = 2;
  required uint32 n_step = 3;
  required uint32 slot_index = 4;
  required bytes data = 10;
  repeated bool term = 11;
}

message ReqPushLog {
  required string log = 10;
}

message RepPush {
  required bool succ = 1;
}

message RepMatchRes {
}

message Msg {
  oneof msg {
    ReqGetInfo  req_get_info  = 11;
    RepGetInfo  rep_get_info  = 12;
    ReqPushData req_push_data = 21;
    ReqPushLog  req_push_log  = 22;
    RepPush     rep_push      = 29;
  }
  required MsgType type = 99;  // What type of message

  optional string version = 100 [default='0.1.6'];// Version of protocal interface
  optional string sender = 101;  // Sender's uuid
  optional string error = 102;  // error message
};

